Fix view toolbar wrapping issue
Fixes RM-4542

--- a/axelor-web/src/main/webapp/css/main.css
+++ b/axelor-web/src/main/webapp/css/main.css
@@ -500,7 +500,7 @@ header .navbar .nav-link-user-sub {
 }
 .record-toolbar-right {
 	top: 0;
-	right: 0;
+	right: 6px;
 	position: absolute;
 }
 
